--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -15,6 +15,9 @@
         <p class="text-center"><%= item.detail %></p>
       </div>
     <% end %>
+
+    <div class="mt-5 profile-pagenate"><%= paginate @all_ranks %></div>
+
   </div>
 
   <div class="col-md-1"></div>
