--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -16,7 +16,7 @@
       </div>
     <% end %>
 
-    <div class="mt-5 profile-pagenate"><%= paginate @all_ranks %></div>
+    <div class="mt-5 profile-pagenate"><%= paginate @my_items %></div>
 
   </div>
 
